correção de erros(menu)

--- a/home.html
+++ b/home.html
@@ -66,7 +66,7 @@
                         <h3><a href="#">Aliquam diam consequat</a></h3>
                         <p>Eget mattis at, laoreet vel amet sed velit aliquam diam ante, dolor aliquet sit amet vulputate mattis amet laoreet lorem.</p>
                         <ul class="actions">
-                            <li><a  class="button style1" id="tosse" onclick="abrirPag(event);">Leia mais</a></li>
+                            <li><a  class="button style1" id="tosse" onclick="abrirPag(event);">Saiba mais</a></li>
                         </ul>
                     </section>
                 </div>
@@ -76,7 +76,7 @@
                         <h3><a href="#">Nisl adipiscing sed lorem</a></h3>
                         <p>Eget mattis at, laoreet vel amet sed velit aliquam diam ante, dolor aliquet sit amet vulputate mattis amet laoreet lorem.</p>
                         <ul class="actions">
-                            <li><a href="#" class="button style1">Leia mais</a></li>
+                            <li><a href="#" class="button style1">Saiba mais</a></li>
                         </ul>
                     </section>
                 </div>
@@ -86,7 +86,7 @@
                         <h3><a href="#">Mattis tempus lorem</a></h3>
                         <p>Eget mattis at, laoreet vel amet sed velit aliquam diam ante, dolor aliquet sit amet vulputate mattis amet laoreet lorem.</p>
                         <ul class="actions">
-                            <li><a href="#" class="button style1">Leia mais</a></li>
+                            <li><a href="#" class="button style1">Saiba mais</a></li>
                         </ul>
                     </section>
                 </div>
