--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 							<nav id="nav">
 								<ul>
 									
-									<li><a id="home" href="#" onclick="abrirPag(null);">Home</a></li>
+									<li><a id="home" onclick="abrirPag(null);">Home</a></li>
 									<li>
 										<a href="#">Artigos recentes</a>
 										<ul>
-											<li><a id="tosse" onclick="abrirPag(event)"  href="#introducao">Tosse</a></li>
+											<li><a id="tosse" onclick="abrirPag(event)">Tosse</a></li>
 											<li><a href="#">Magna veroeros</a></li>
 											<li><a href="#">Etiam nisl</a></li>
 								
