--- a/index.html
+++ b/index.html
@@ -18,7 +18,16 @@
        <!--edições do padrão da template--> 
         <link rel="stylesheet" href="assets/css/editado.css">
       
-        
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<script>
+		(adsbygoogle = window.adsbygoogle || []).push({
+		google_ad_client: "ca-pub-1533523247849734",
+		enable_page_level_ads: true
+		});
+	</script>        
+
+
+
 	</head>
 	<body class="homepage">
 		<div id="page-wrapper">
