erro de loading 3

--- a/topo.html
+++ b/topo.html
@@ -5,7 +5,7 @@
 
         <!-- Logo -->
             <div id="logo">
-                <h1><a href="#">Saúde e vida</a></h1>
+                <h1><a href="#">Saúde mais vida</a></h1>
                 <p>A vida depende da saúde, e a saúde não existe sem vida</p>
             </div>
 
@@ -13,7 +13,7 @@
             <nav id="nav">
                 <ul>
 
-                    <li><a id="home" href="#" >Home</a></li>
+                    <li><a id="home" href="#">Home</a></li>
                     <li>
                         <a href="#">Artigos recentes</a>
                         <ul id="listarRecentes">
