correção de erros para mobile

--- a/topo.html
+++ b/topo.html
@@ -1,35 +1,43 @@
-<!-- Header -->
-<div id="header-wrapper" class="wrapper">
-    <div id="header">
-        <a href="#" id="foo"></a>
 
-        <!-- Logo -->
-            <div id="logo">
-                <h1><a href="#">Saúde mais vida</a></h1>
-                <p>A vida depende da saúde, e a saúde não existe sem vida</p>
-            </div>
+<body>
+<header>
+    <div id="header-wrapper" class="wrapper">
+        <div id="header">
+            <a href="#" id="foo"></a>
 
-        <!-- Nav -->
-            <nav id="nav">
-                <ul>
+            <!-- Logo -->
+                <div id="logo">
+                    <h1><a href="#">Saúde mais vida</a></h1>
+                    <p>A vida depende da saúde, e a saúde não existe sem vida</p>
+                </div>
 
-                    <li><a id="home" href="#">Home</a></li>
-                    <li>
-                        <a href="#">Artigos recentes</a>
-                        <ul id="listarRecentes">
+            <!-- Nav -->
+                <nav id="nav">
+                    <ul>
 
-                            <li><a></a></li>
-                            <li><a></a></li>
-                            <li><a></a></li>
+                        <li><a id="home" href="#">Home</a></li>
+                        <li>
+                            <a href="#artigos" id="listarRecentes" >Artigos recentes</a>
+                            <ul id="artRecentes">
 
-                        </ul>
-                    </li>
-                    <li><a href="#">Mais artigos</a></li>
-                    <li><a href="#contatos">Contatos</a></li>
+                                <li><a id="campo1"></a></li>
+                                <li><a id="campo2"></a></li>
+                                <li><a id="campo3"></a></li>
+                               
+
+                            </ul>
+                        </li>
+                        <li><a href="#" id="mais">Mais artigos</a></li>
+                        <li><a href="#" id="contatos">Contatos</a></li>
 
 
-                </ul>
-            </nav>
+                    </ul>
+                </nav>
 
+        </div>
     </div>
-</div>
+    
+</header>
+
+ </body>
+
